# Math-Research-Agent

./: .gitignore  AGENT.md  LICENSE  README.md  pyproject.toml
AGENT/ArchitectureTools/: ArchitectureDiagram.md  README.md  architecture.json  index.html
AGENT/codebase-graph/: README.md  build_codebase_graph.py  codebase-graph.json
configs/: default.toml  multi_provider.toml  phase1_only.toml
docs/: built-in-problem-answers.md
src/math_agent/: __init__.py  config.py  main.py  webapp.py
src/math_agent/agents/: assistant.py  base.py  cli_agent.py  falsifier.py  formalizer.py  prompt_loader.py  review.py  thinking.py
src/math_agent/context/: __init__.py  compression.py  diminishing.py  prompt_assembler.py  token_budget.py
src/math_agent/documents/: __init__.py  memo.py  module_memo.py  notes.py
src/math_agent/eval/: __init__.py  harness.py
src/math_agent/lean/: __init__.py  compiler.py  external_claims.py  mathlib_search.py  module_splitter.py  project.py  toolplane.py
src/math_agent/llm/: anthropic_client.py  base.py  (+3 more)
tests/: conftest.py  test_main.py
tests/test_agents/: test_falsifier.py  test_formalizer.py  test_prompts.py  test_review.py  test_thinking.py
tests/test_context/: test_compression.py  test_diminishing.py  test_prompt_assembler.py
tests/test_documents/: test_memo.py  test_memory.py
tests/test_eval/: test_harness.py
tests/test_lean/: test_compiler.py
tests/test_orchestrator/: test_coordinator.py  test_phase1_completeness.py  test_phase1_resume.py
tests/test_problem/: test_spec.py
tests/test_runtime/: test_runtime_config.py
(+16 files in other folders)
