[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "math-agent"
version = "0.1.0"
description = "Depth-first MEMO-driven math proof agent with Lean 4 verification"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30",
    "anthropic>=0.30",
    "google-genai>=1.0",
    "httpx>=0.27",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    "tomli>=2.0;python_version<'3.12'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
math-agent = "math_agent.main:main"
math-agent-web = "math_agent.webapp:main"

[tool.setuptools.packages.find]
where = ["src"]
